Correcciones de Sonarqube